--- a/HomePage.xaml
+++ b/HomePage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:exec="clr-namespace:IrreoExFirmware"
+             xmlns:lgn="clr-namespace:IrreoExFirmware"
              x:Class="IrreoExFirmware.HomePage"
              Title="">
     
@@ -17,6 +18,12 @@
                 <RowDefinition Height="0.05*" />
                 <RowDefinition Height="0.7*" />
             </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.5*" />
+            </Grid.ColumnDefinitions>
+
+
 
             <Image Grid.Row="0" Source="irreo.png" 
                    HorizontalOptions="Center" MaximumWidthRequest="300"/>
